fix: Update letter-spacing and paragon group c type settings (#58)
## Description
There are a couple of long-standing bugs that are addressed, due to the
duration for which these bugs have existed this is considered a major change
as teams may have already introduced their own fixes, and this may impact
on that

The bugs that have been addressed are:
- Change the letter-spacing to normal when either the `b-reith-sans-loaded`
 or `b-reith-serif-loaded` selectors are present.
- Change the font-size/line-height for Paragon (Group C) to be 28/32 to
match the GEL Typography guideline.

## JIRA (BBC Staff Only)
https://jira.dev.bbc.co.uk/browse/GELWEB-1370

--- a/test/test-with-large-fonts-expected.css
+++ b/test/test-with-large-fonts-expected.css
@@ -39,6 +39,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-canon-bold,
+.b-reith-serif-loaded .gel-canon-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-canon-bold {
     font-size: 32px;
@@ -104,6 +109,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-trafalgar-bold,
+.b-reith-serif-loaded .gel-trafalgar-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-trafalgar-bold {
     font-size: 24px;
@@ -146,10 +156,10 @@
 
 @media (min-width: 37.5em) {
   .gel-paragon {
-    font-size: 30px;
-    font-size: 1.875rem;
-    line-height: 34px;
-    line-height: 2.125rem;
+    font-size: 28px;
+    font-size: 1.75rem;
+    line-height: 32px;
+    line-height: 2rem;
   }
   .no-touch .gel-paragon {
     font-size: 28px;
@@ -169,6 +179,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-paragon-bold,
+.b-reith-serif-loaded .gel-paragon-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-paragon-bold {
     font-size: 22px;
@@ -180,10 +195,10 @@
 
 @media (min-width: 37.5em) {
   .gel-paragon-bold {
-    font-size: 30px;
-    font-size: 1.875rem;
-    line-height: 34px;
-    line-height: 2.125rem;
+    font-size: 28px;
+    font-size: 1.75rem;
+    line-height: 32px;
+    line-height: 2rem;
   }
   .no-touch .gel-paragon-bold {
     font-size: 28px;
@@ -223,6 +238,11 @@
   font-weight: bold;
   letter-spacing: -1px;
   letter-spacing: -0.0625rem;
+}
+
+.b-reith-sans-loaded .gel-double-pica-bold,
+.b-reith-serif-loaded .gel-double-pica-bold {
+  letter-spacing: normal;
 }
 
 @media (min-width: 37.5em) {
@@ -272,6 +292,10 @@
   .gel-great-primer-bold {
     letter-spacing: -1px;
     letter-spacing: -0.0625rem;
+  }
+  .b-reith-sans-loaded .gel-great-primer-bold,
+  .b-reith-serif-loaded .gel-great-primer-bold {
+    letter-spacing: normal;
   }
 }
 
@@ -550,6 +574,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-atlas-bold,
+.b-reith-serif-loaded .gel-atlas-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-atlas-bold {
     font-size: 96px;
@@ -613,6 +642,11 @@
   font-weight: bold;
   letter-spacing: -1px;
   letter-spacing: -0.0625rem;
+}
+
+.b-reith-sans-loaded .gel-elephant-bold,
+.b-reith-serif-loaded .gel-elephant-bold {
+  letter-spacing: normal;
 }
 
 @media (min-width: 20em) {
@@ -680,6 +714,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-imperial-bold,
+.b-reith-serif-loaded .gel-imperial-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-imperial-bold {
     font-size: 64px;
@@ -745,6 +784,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-royal-bold,
+.b-reith-serif-loaded .gel-royal-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-royal-bold {
     font-size: 52px;
@@ -808,6 +852,11 @@
   font-weight: bold;
   letter-spacing: -1px;
   letter-spacing: -0.0625rem;
+}
+
+.b-reith-sans-loaded .gel-foolscap-bold,
+.b-reith-serif-loaded .gel-foolscap-bold {
+  letter-spacing: normal;
 }
 
 @media (min-width: 20em) {
