--- a/test/test-without-large-fonts-expected.css
+++ b/test/test-without-large-fonts-expected.css
@@ -39,6 +39,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-canon-bold,
+.b-reith-serif-loaded .gel-canon-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-canon-bold {
     font-size: 32px;
@@ -104,6 +109,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-trafalgar-bold,
+.b-reith-serif-loaded .gel-trafalgar-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-trafalgar-bold {
     font-size: 24px;
@@ -146,10 +156,10 @@
 
 @media (min-width: 37.5em) {
   .gel-paragon {
-    font-size: 30px;
-    font-size: 1.875rem;
-    line-height: 34px;
-    line-height: 2.125rem;
+    font-size: 28px;
+    font-size: 1.75rem;
+    line-height: 32px;
+    line-height: 2rem;
   }
   .no-touch .gel-paragon {
     font-size: 28px;
@@ -169,6 +179,11 @@
   letter-spacing: -0.0625rem;
 }
 
+.b-reith-sans-loaded .gel-paragon-bold,
+.b-reith-serif-loaded .gel-paragon-bold {
+  letter-spacing: normal;
+}
+
 @media (min-width: 20em) {
   .gel-paragon-bold {
     font-size: 22px;
@@ -180,10 +195,10 @@
 
 @media (min-width: 37.5em) {
   .gel-paragon-bold {
-    font-size: 30px;
-    font-size: 1.875rem;
-    line-height: 34px;
-    line-height: 2.125rem;
+    font-size: 28px;
+    font-size: 1.75rem;
+    line-height: 32px;
+    line-height: 2rem;
   }
   .no-touch .gel-paragon-bold {
     font-size: 28px;
@@ -223,6 +238,11 @@
   font-weight: bold;
   letter-spacing: -1px;
   letter-spacing: -0.0625rem;
+}
+
+.b-reith-sans-loaded .gel-double-pica-bold,
+.b-reith-serif-loaded .gel-double-pica-bold {
+  letter-spacing: normal;
 }
 
 @media (min-width: 37.5em) {
@@ -272,6 +292,10 @@
   .gel-great-primer-bold {
     letter-spacing: -1px;
     letter-spacing: -0.0625rem;
+  }
+  .b-reith-sans-loaded .gel-great-primer-bold,
+  .b-reith-serif-loaded .gel-great-primer-bold {
+    letter-spacing: normal;
   }
 }
 
@@ -548,6 +572,11 @@
   font-weight: bold;
   letter-spacing: -1px;
   letter-spacing: -0.0625rem;
+}
+
+.b-reith-sans-loaded .my-component__title,
+.b-reith-serif-loaded .my-component__title {
+  letter-spacing: normal;
 }
 
 @media (min-width: 20em) {
